spade-tests/src/snapshots/spade_tests__hir_lowering__tests__invalid_field_access.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: X has no field named not_a_field
  ┌─ testinput:4:7
  │
4 │     x.not_a_field
  │       ^^^^^^^^^^^ Not a field of X


